# hora

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  README_FR.md  README_JP.md  README_KR.md  README_RU.md
.github/workflows/: rust.yml
benches/: bench_metrics.rs
examples/: Cargo.toml
examples/src/: ann_bench.rs  demo.rs  load_dataset.sh  main.rs  mod.rs
src/: lib.rs
src/core/: ann_index.rs  arguments.rs  calc.rs  heap.rs  kmeans.rs  knn.rs  macros.rs  metrics.rs  mod.rs  neighbor.rs  node.rs  random.rs  simd_metrics.rs
src/index/: bpt_idx.rs  bpt_params.rs  bruteforce_idx.rs  bruteforce_params.rs  hnsw_idx.rs  hnsw_params.rs  mod.rs  pq_idx.rs  pq_params.rs  rpt_idx.rs  rpt_params.rs  ssg_idx.rs  ssg_params.rs
src/interface/: collection.rs  database.rs
