[package]
name = "hora"
version = "0.1.0"
authors = ["salamer <gagasalamer@outlook.com>"]
edition = "2018"
license = "Apache-2.0"

description = "Hora Search Everywhere"
documentation = "https://docs.rs/hora/"
repository = "https://github.com/hora-search/hora"

keywords = ["approximate nearest neighbor search", "artificial intelligence", "SIMD", "nearest-neighbor-search", "no_std"]
categories = ["artificial intelligence"]

[profile.dev]
codegen-units = 4 
debug = 1 # required for line numbers in tests, see tikv #5049
debug-assertions = true 
incremental = true 
lto = false 
opt-level = 0 
overflow-checks = false 
panic = 'unwind' 
rpath = false 

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[features]
simd = ["packed_simd"]
no_std = ["hashbrown"]

[dependencies]
bincode = "1.3.2"
fixedbitset = "0.4.0"
hashbrown = {version = "0.11.2", optional = true}
log = "^0.4"
num = "0.4.0"
packed_simd = {version = "0.3.5", package = "packed_simd_2", optional = true}
rand = "0.8.3"
rayon = "^1.5"
serde = {version = "1.0", features = ["derive"]}
smallvec = {version = "1.6.1", features = ["serde"], optional = true}

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench_metrics"
harness = false