[package]
authors = ["aljun <gagasalamer@outlook.com>", "moonlight"]
edition = "2018"
license = "Apache-2.0"
name = "hora"
version = "0.1.1"

description = "Hora Search Everywhere"
homepage = "https://horasearch.com"
readme = "README.md"
repository = "https://github.com/hora-search/hora"

categories = ["algorithms", "data-structures"]
keywords = ["intelligence", "neighbor", "SIMD", "search", "distance"]

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 4
debug = 1
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[features]
no_std = ["hashbrown"]
simd = ["packed_simd"]
no_thread = []

[dependencies]
bincode = "^1.3"
fixedbitset = "0.4.0"
hashbrown = {version = "0.11.2", optional = true}
log = "^0.4"
num = "0.4.0"
packed_simd = {version = "0.3.5", package = "packed_simd_2", optional = true}
rand = "0.8.3"
rayon = "^1.5"
serde = {version = "^1.0", features = ["derive"]}

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
harness = false
name = "bench_metrics"
